# dIanniX

./: CMakeLists.txt  CMakePresets.json  IanniX.pro  README.md  abstractionsgl.cpp  abstractionsgl.h  build.sh  iannix.cpp  iannix.h  iannixapp.cpp
Examples/: BigG.iannix  Fractals.iannix  Grid.iannix  IanniX logo.iannix  Rosette.iannix  Simple Diamed example.dmd  Spirographe.iannix
Tools/Templates/: MIDI Live Starter.txt  MIDI Random Scale Notes.txt  MIDI Scales 12 Keys Major Minor.txt
geometry/qmuparser/: muParserTest.cpp  muParserToken.h  muParserTokenReader.cpp
gui/: uihelp.cpp  uiinspector.cpp  uiinspector.ui  uimessagebox.cpp  uimessagebox.h  uisplashscreen.cpp  uisplashscreen.h  uiview.cpp  uiview.h  uiview.ui
gui/qjsedit/: jsedit.cpp
interfaces/: extkinectmanager.h  extoscpatternask.cpp  extoscpatternask.h  extoscpatternask.ui  extoscpatterneditor.cpp  extoscpatterneditor.h  extoscpatterneditor.ui  extscriptvariableask.cpp  interfacehttp.cpp  interfacemidi.cpp  interfaceosc.cpp  interfaceserial.cpp  interfacesyphon.cpp  interfacesyphon.h  interfacetcp.cpp  interfaceudp.cpp
interfaces/qextserialport/: qextserialenumerator.cpp
interfaces/qrtmidi/: RtMidi.cpp
interfaces/qwebsockets/: dataprocessor.cpp  dataprocessor.h  handshakerequest.cpp  handshakeresponse.cpp  websocket.cpp  websocket.h
interfaces/zeroconf/: servicebrowser.cpp
items/: uicoloritem.cpp  uifileitem.cpp  uipathpointsitem.cpp  uitextureitem.cpp  uitreeview.cpp
messages/: message.cpp  message.h  messagemanager.cpp  messagemanager.h  messagemanagerlog.ui  messagemanagerloginterface.h  messagemanagerlogmini.ui
misc/: application.cpp  application.h  options.cpp  options.h
objects/: nxcursor.cpp  nxcursor.h  nxcurve.cpp  nxcurve.h  nxdocument.cpp  nxdocument.h  nxgroup.cpp  nxgroup.h  nxobject.cpp  nxobject.h  nxtrigger.cpp  nxtrigger.h
render/: uirender.cpp  uirender.h  uirenderpreview.cpp  uirenderpreview.h  uirendersyphon.h
scripting/diamed/: DIAMED_SPEC_v0.1.md  README.md  diamed_compiler.cpp  diamed_compiler.h
transport/: transport.cpp  transport.h  transport.ui  uiabout.cpp  uiabout.h  uieditor.cpp  uieditor.h
